[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "next-pass"
version = "0.1.0"
description = "Predict the next satellite overpass (S1/S2/L8/L9) over an AOI and query OPERA products."
readme = "README.md"
requires-python = ">=3.10"

license = { file = "LICENSE" }

authors = [
  { name = "Emre Havazli, Ines Fenni, and OPERA Disaster Response Team" },
]

keywords = [
  "satellite",
  "remote-sensing",
  "sar",
  "sentinel-1",
  "sentinel-2",
  "landsat",
  "opera",
  "earth-observation",
  "overpass",
]

classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }


[project.urls]
Homepage = "https://github.com/OPERA-Cal-Val/next_pass"
Source = "https://github.com/OPERA-Cal-Val/next_pass"
Issues = "https://github.com/OPERA-Cal-Val/next_pass/issues"

[project.scripts]
"next_pass.py" = "next_pass:main"

[tool.setuptools]
py-modules = ["next_pass"]

[tool.setuptools.packages.find]
include = ["utils"]
